--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome tanzu SEs
+welcome=Welcome tanzu TAP SMEs
 required=is required
 notFound=has not been found
 duplicate=is already in use
